chore: add academic sector attribute for student in table
